--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@
 .content-pane {
   padding-top: 135px;
   overflow: hidden;
+  position: relative;
 }
 
 html, body{
@@ -58,15 +59,20 @@ html, body{
   color: white;
   box-sizing: border-box;
   margin-bottom: 20px;
-  margin-right: 20px;
+  margin-right: 1px;
+  margin-left: 1px;
+  position: relative;
+  width: 500px;
+  max-width: 100%;
+  border:3px solid black;
 }
 .flickr-image {
-  width: 500px;
+  width: 100%;
   height: 500px;
+  max-width: 100%;
 }
 
-.flickr-image, .detail-pane{
-  max-width: 100%;
+.flickr-image{
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -75,14 +81,16 @@ html, body{
 .tags{
   max-width: 100%;
   box-sizing: border-box;
-
+}
+.title{
+  font-size:24px;
 }
 .title-box{
-  width: 500px;
-  max-width: 100%;
+  
+  
 /*   display: inline-table;
  */  background-color: rgba(0,0,0,.5);
-  max-width: 100%;
+  max-width: 500px;
 /*   position: absolute;
  bottom: 0;*/  
   left: 0;
@@ -93,18 +101,28 @@ html, body{
 }
 
 .tag{
-  border-radius: 5px;
-  font-size: 8px;
-  padding: 4px;
-  margin: -2px;
+  border-radius: 3px;
+  font-size: 11px;
+  padding: 6px;
+  margin: 0px;
   background-color:
-  #282828;
+  #202020;
+  border: 1px solid
+  #353535;
+  line-height: 30px;
+  line-height: 24px;
+  padding-top: 2px;
+  padding-bottom: 2px
 }
-
-.description{
+.tag:hover {
+  background-color: rgb(245, 245, 245);
+  color:#333;
+}
+.description, .by{
   color: rgb(200,200,200);
   font-size: 12px;
 }
+
 a {
   color: white;
   text-decoration: none;
@@ -112,4 +130,8 @@ a {
 
 a:visited {
   color: rgb(200,200,200)
+}
+
+a:hover{
+  text-decoration: underline;
 }
